# swoq-bot

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  dotenv
proto/: swoq.proto
src/: boulder_info.rs  boulder_tracker.rs  composite_observer.rs  default_observer.rs  game.rs  game_observer.rs  goal.rs  item_tracker.rs  lib.rs  main.rs  map.rs  pathfinding.rs  player_state.rs  strategy.rs  swoq.rs  types.rs  visualizer.rs  visualizing_observer.rs  world_state.rs
src/goals/: avoid_enemy.rs  drop_boulder.rs  drop_boulder_on_plate.rs  explore.rs  fetch_boulder.rs  get_key.rs  goal.rs  kill_enemy.rs  mod.rs  open_door.rs  pass_through_door.rs  pickup_health.rs  pickup_sword.rs  random_explore.rs  reach_exit.rs  wait_on_tile.rs
src/infra/: boulder_tracker.rs  cbs.rs  composite_observer.rs  default_observer.rs  game_observer.rs  item_tracker.rs  mod.rs  pathfinding.rs  swoq.rs  visualizing_observer.rs
src/planners/: mod.rs
src/planners/goap/: executor.rs  game.rs  game_state.rs  mod.rs  planner.rs  planner_state.rs  state_evaluator.rs
src/state/: map.rs  mod.rs  player_state.rs  world_state.rs
src/strategies/: attack_or_flee_enemy.rs  boulder_on_plate.rs  cooperative_door_passage.rs  drop_boulder.rs  drop_boulder_on_plate.rs  fallback_pressure_plate.rs  fetch_boulder_for_plate.rs  get_key_for_door.rs  hunt_enemy_with_sword.rs  key_and_door.rs  mod.rs  move_unexplored_boulder.rs  open_door_with_key.rs  pickup_health.rs  pickup_sword.rs  planner.rs  random_explore.rs  reach_exit.rs  use_pressure_plate_for_door.rs
src/ui/: mod.rs  visualizer.rs
(+79 files in other folders)
