[package]
name = "robbot"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "robbot"
path = "src/main.rs"

[dependencies]
bevy = { version = "0.17.2" }
dotenv = "0.15.0"
prost = "0.14.1"
time = { version = "0.3.44", features = ["formatting", "local-offset"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
tonic = "0.14.2"
tonic-prost = "0.14.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
tonic-prost-build = "0.14.2"
