[package]
name = "robbot"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "robbot"
path = "src/main.rs"

[features]
default = []
rl = ["burn", "burn-train"]

[dependencies]
bevy = { version = "0.17.3" }
dotenv = "0.15.0"
prost = "0.14.1"
rand = "0.9.2"
time = { version = "0.3.44", features = ["formatting", "local-offset"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
tonic = "0.14.2"
tonic-prost = "0.14.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Burn framework for RL (optional, enabled with --features rl)
burn = { version = "0.17", features = [
  "autodiff",
  "train",
  "metal",
], optional = true }
burn-train = { version = "0.17", optional = true }

[build-dependencies]
tonic-prost-build = "0.14.2"
